--- a/user-signup/templates/index.html
+++ b/user-signup/templates/index.html
@@ -20,7 +20,7 @@
 
         <label> Rewirte Password:
         <input id="password2" type="password" name= "password2" value= "{{password2}}"/>
-        <p class="error"> {{password2error}} </p> 
+        <p class="error"> {{password2Error}} </p> 
         </label>
 
         <label for="email">Email(Optional):</label>
